--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Messages</string>
     <string name="message">Message to Send</string>
     <string name="message_user_name">User Name</string>
+    <string name="welcome_message">Hello, %1$s!!</string>
+
 </resources>
